# lucy-project

./: .gitignore  .gitmodules  pyproject.toml  score_sugoi.py  train.py  train.sh  train_base.sh  train_runpod_base.sh  train_small.sh  train_spm.sh  translate.py
anki_decks/: extract_anki.sh  extract_apkg.sh  generate_csv.py
dataset/: cook_data.sh  load.py
dataset/scripts/: clean_en.sh  clean_ja.sh  concatenate_bitext.sh  count_corpus_lines.sh  extract_anime_subtitles.py  extract_jarunc.sh  extract_kftt.py  extract_lucy.py  extract_paracrawl.py  extract_ted.py  extract_titles_newscom.py  extract_wikimatrix.py  get_mid_corpus.sh  plot_tokens_length.py  prepare_reuters_sents.py  preprocess.py  preprocess_lucy.py
dataset/sm/: userdef.txt
games/: generate_csv.py
spm/: train.py  train_spm_bitext.sh  train_spm_en.sh  train_spm_ja.sh
spm/dataset/: load.py
spm/scripts/: init.sh  mecab_ja.py  mecab_ja_small.py  moses_en.sh  moses_ja.sh
sugoi_server/: run.sh  server.py
utils/: dataset_utils.py  df_utils.py  normalize_text.py  print_model_params.py  spm_add_extras.py  trim_big_model.py  unicode.py
utils/script_parsers/: __init__.py  ast_engine.py  nps_engine.py  renpy.py  scn.py  struct.py  unity_scene_yaml.py
utils/trim_model/: trim_big_model.py
